<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.StorageFragment"
    >

    <FrameLayout
        android:id="@+id/title_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        android:paddingTop="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/storage_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Headline1"
            android:text="@string/storage_title_text"
            android:layout_gravity="center_vertical|start"/>

        <ImageButton
            android:id="@+id/recent_image_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_history_24"
            android:backgroundTint="@color/white"
            android:layout_gravity="center_vertical|center_horizontal"
            android:contentDescription="@string/recently_modified_Image_button_content_description"/>

        <ImageButton
            android:id="@+id/filter_image_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_filter_list_24"
            android:backgroundTint="@color/white"
            android:layout_gravity="center_vertical|end"
            android:contentDescription="@string/filter_description_text"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/filter_layout_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:paddingHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@id/title_linear_layout">

        <RadioGroup
            android:id="@+id/filter_type_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/filter_name_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_name_radio_button_text"
                android:checked="true"
                style="@style/Text.Body3"/>
            <RadioButton
                android:id="@+id/filter_size_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_size_radio_button_text"
                style="@style/Text.Body3"/>
            <RadioButton
                android:id="@+id/filter_timestamp_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_timestamp_radio_button_text"
                style="@style/Text.Body3"/>
            <RadioButton
                android:id="@+id/filter_extension_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_extension_radio_button_text"
                style="@style/Text.Body3"/>

        </RadioGroup>

        <RadioGroup
            android:id="@+id/filter_order_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/filter_order_descending_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_order_descending_radio_button_text"
                style="@style/Text.Body3"/>
            <RadioButton
                android:id="@+id/filter_order_ascending_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_order_ascending_radio_button_text"
                android:checked="true"
                style="@style/Text.Body3"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/current_path_splitter_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cardview_shadow_start_color"
        app:layout_constraintBottom_toTopOf="@id/current_path_text_view"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal" />
    <TextView
        android:id="@+id/current_path_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Text.Body3"
        android:textStyle="italic"
        tools:text="emulated/0/"
        android:paddingHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/filter_layout_linear_layout"/>

    <LinearLayout
        android:id="@+id/current_path_splitter_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/cardview_shadow_start_color"
        app:layout_constraintTop_toBottomOf="@id/current_path_text_view"
        android:orientation="horizontal" />


    <androidx.recyclerview.widget.RecyclerView
        android:paddingHorizontal="12dp"
        android:id="@+id/storage_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_path_splitter_bottom"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="35dp"
        tools:listitem="@layout/storage_item" />

    <ProgressBar
        android:id="@+id/storage_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/MyProgressBar"/>

</androidx.constraintlayout.widget.ConstraintLayout>