<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">


    <ImageView
        android:id="@+id/file_icon_image_view"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/file_icon_content_description"
        tools:src="@drawable/baseline_folder_24" />

    <TextView
        android:id="@+id/file_name_text_view"
        style="@style/Text.Headline2"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:maxLines="2"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/file_size_text_view"
        app:layout_constraintEnd_toStartOf="@id/file_share_image_button"
        app:layout_constraintStart_toEndOf="@id/file_icon_image_view"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Documents" />

    <TextView
        android:id="@+id/file_size_text_view"
        style="@style/Text.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/file_icon_image_view"
        tools:text="47.06KB" />

    <TextView
        android:id="@+id/file_parameters_splitter_text_view"
        style="@style/Text.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/file_size_text_view"
        android:text="@string/size_timestamp_splitter"
        tools:text="|" />

    <TextView
        android:id="@+id/file_timestamp_text_view"
        style="@style/Text.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/file_parameters_splitter_text_view"
        tools:text="07.04.2023 10.37" />

    <ImageButton
        android:id="@+id/file_share_image_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_share_24"
        app:layout_constraintEnd_toStartOf="@id/file_delete_image_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/share_image_button_content_description"/>

    <ImageButton
        android:id="@+id/file_delete_image_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_delete_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/delete_image_button_content_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:background="@color/cardview_shadow_start_color"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
